export const snapshot = {};

snapshot[`transform example foo-bar-baz.ts 1`] = `
"class Foo {
    foo: string;
}

class FooBar {
    foo: string;
    bar: number;
}

export class FooBarBaz {
    baz: boolean;
    foo: string;
    bar: number;
}

class Bar {
    bar: number;
}
"
`;

snapshot[`transform example foo-bar-baz.ts with decorators 1`] = `
'@context({ "foo": "./examples/classgen/foo-bar-baz.ts#Foo/foo" })
class Foo {
    foo: string;
}

@context({
    "foo": "./examples/classgen/foo-bar-baz.ts#Foo/foo",
    "bar": "./examples/classgen/foo-bar-baz.ts#Bar/bar"
})
class FooBar {
    foo: string;
    bar: number;
}

@context({
    "baz": "./examples/classgen/foo-bar-baz.ts#FooBarBaz/baz",
    "foo": "./examples/classgen/foo-bar-baz.ts#Foo/foo",
    "bar": "./examples/classgen/foo-bar-baz.ts#Bar/bar"
})
export class FooBarBaz {
    baz: boolean;
    foo: string;
    bar: number;
}

@context({ "bar": "./examples/classgen/foo-bar-baz.ts#Bar/bar" })
class Bar {
    bar: number;
}
'
`;
